# glyph-editor

./: .gitmodules  README.md  glyph-editor.cabal  stack.yaml
app/: Main.hs  Model.hs  WX.hs
