name:                  glyph-editor
version:               0.1.0.0
synopsis:              GUI editor for the Glyph handwriting synthesis engine
description:           TODO
homepage:              https://github.com/spinda/glyph-editor#readme
bug-reports:           https://github.com/spinda/glyph-editor/issues
license:               BSD3
license-file:          LICENSE
author:                Michael Smith
maintainer:            Michael Smith <michael@spinda.net>
copyright:             2016 Michael Smith
category:              Graphics
build-type:            Simple
cabal-version:         >=1.10

executable glyph-editor
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Paths_glyph_editor
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.4 && < 5
                     , glyph
                     , wx >= 0.92 && < 0.93
                     , wxcore >= 0.92 && < 0.93
  default-language:    Haskell2010

source-repository head
  type:                git
  location:            https://github.com/spinda/glyph-editor

